Commit made by y508839

--- a/config/scaffolding/Sergh2208devProject.yml
+++ b/config/scaffolding/Sergh2208devProject.yml
@@ -8,7 +8,7 @@ packages:
   gitUsername: ArtiKhareIBM
   gitBranch: main
 - name: upperfspackage
-  gitServerName: srcCtrl_bitbucket_Arti
+  gitServerName: RAHS_IBMBitbucket
   gitUrl: https://bitbucket.org/testartiibm
-  gitUsername: artikhare
+  gitUsername: rahulsingh68
   gitBranch: master
